--- a/index.html
+++ b/index.html
@@ -66,15 +66,21 @@
         </div>  
         <div class="col-md-12 col-lg-6 p-4">
           <h2 class="h1">Nice to meet you, I'm Dan</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-        <a href="#projects" class="btn btn-primary btn-xl mt-5">Hire me<a>
+          <p class="lead">I’m Dan, a web developer with two years of freelance experience. I have worked with a range of businesses on different freelance websites, such as Fiverr plus have helped some local charities with their website issues, such as  WordPress development and SEO.<br />
+          <br />
+          I specialise in building clean elongate websites using custom code and twitter bootstrap, using WordPress as the CMS. I feel this achieves a smooth, fast running website, with excellent responsive design and mobile-friendly optimisations.
+ <br /><br />
+          When I’m not glued to the computer coding, you will find me being a father or tinkering in my shed with RC cars and electronics.
+          </p>
+        <a class="btn btn-primary btn-xl mt-4" href="contact.html">hire me<span class="sr-only">(current)</span></a>
+        <a target="_blank" class="btn btn-secondary btn-xl mt-4" href="https://teamtreehouse.com/danielmobbs">my skills<span class="sr-only">(current)</span></a>
         </div>  
       </div>  
     </div>    
   </section>
 
   <!--skills & tools-->
-  <section class="bg-3 page-section">
+  <section class="bg-light page-section">
     <div class="container">       
       <div class="card-deck text-center">
         <div class="card">
@@ -116,9 +122,9 @@
       <div class="card-deck pt-4">
        <div class="card" style="width:500px">
         <a href="https://www.quaker-tapestry.co.uk/">
-           <img class="card-img-top" src="images/goodly.jpg" alt="Card image">
-           <div class="card-img-overlay text-center">
-             <h4 class="card-title">Goodly Dale Cottage</h4>
+           <img class="image" src="images/goodly.jpg" alt="Card image">
+           <div class="middle text-center">
+             <h4 class="card-title text">Goodly Dale Cottage</h4>
              <p class="h1">WordPress Website</p>                
            </div>
          </a> 
