--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   </nav>
   
   <!--Contact Form-->
-  <div class="bg-primary py-5">
+  <section class="bg-primary py-5">
     <div class="container">
       <div class="row">
           <div class="col-6">
@@ -45,32 +45,55 @@
           </div>
         </div>
     </div>  
-  </div>    
-  <div class="contact"> 
-    <div class="container">      
-      <form class="row">
-        <div class="col-lg-6">
-            <div class="form-group">
-              <input type="text" class="form-control" id="" placeholder=" Enter Name">
+  </section>   
+  <!-- Contact Section Form -->
+      <!-- Contact Section -->
+  <section class="page-section" id="contact">
+    <div class="container">
+      
+      <!-- Contact Section Form -->
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+          <form name="sentMessage" id="contactForm" novalidate="novalidate">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Name</label>
+                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
+              </div>
             </div>
-            <div class="form-group">
-              <input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
-            </div>  
-            <div class="form-group">
-              <input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Email Address</label>
+                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-6">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Phone Number</label>
+                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Message</label>
+                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <br>
+            <div id="success"></div>
             <div class="form-group">
-              <textarea  class="form-control" id="description" placeholder="Enter Your Message"></textarea>
+              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
-            <div>
-              <button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
-            </div>
+          </form>
         </div>
-      </form> 
-    </div>  
-  </div>
+      </div>
+    </div>
+  </section>
 
   <!--footer-->
   <footer class="footer text-center text-white">
