--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Custom Css-->
     <link rel="stylesheet" type="text/css" href="asset/css/custom.css">
 
-    <script>
+    <script>sdsd
     	//Code Goes Here
     </script>
 
@@ -37,8 +37,19 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active text-right pt-4">
             <a class="btn btn-primary btn-xl" href="contact.html">Say Hello<span class="sr-only">(current)</span></a>
-          </li>
+          </li>          
         </ul>  
+        <div class="d-flex justify-content-end py-4">  
+          <div class="social-links">
+            <a target="_blank" href="https://www.facebook.com/d.s.mobbzy/?boosted_auto_open=boosted_website&notif_id=1583687102926739&notif_t=aymt_upsell_tip"><i style="color: #fff; font-size: 38px;"class="fab fa-facebook-square"></i></a>
+          </div>
+          <div class="social-links">  
+            <a target="_blank" href="https://twitter.com/dan69563979"><i style="color: #fff; font-size: 38px;"class="fab fa-twitter-square"></i></a>
+          </div>
+          <div class="social-links">
+            <a target="_blank" href="https://www.linkedin.com/in/dan-mobbs-771b1519a/"><i style="color: #fff; font-size: 38px;"class="fab fa-linkedin"></i></a>
+          </div>
+        </div>  
       </div>
     </div> 
   </nav>
@@ -50,7 +61,7 @@
         <div class="col-12 text-center text-white">
           <img src="images/avataaars.png" width="218px">
           <h2 class="font-weight-bold pt-5 h1">Hello, I'm Dan</h2>
-          <h1 class="font-weight-light h2">lover of code, design and web development</h1>
+          <h1 class="font-weight-light h2">lover of code, design and web development... and coffee</h1>
           <a href="#projects" class="btn btn-primary btn-xl mt-5">my recent work</a>
         </div>
       </div>
@@ -58,19 +69,20 @@
   </header>    
      
   <!--about me-->
-  <section id="projects" class="page-section">
+  <section class="page-section">
     <div class="container">
       <div class="row">
+        <div class="col-md-12 col-lg-12 text-center">
+          <h2 class="h2 font-weight-bolder">Nice to meet you, I'm Dan</h2>
+        </div> 
         <div class="col-md-12 col-lg-6 p-4">
           <img class="img-fluid" src="images/man2.jpg">
         </div>  
-        <div class="col-md-12 col-lg-6 p-4">
-          <h2 class="h1">Nice to meet you, I'm Dan</h2>
-          <p class="lead">I’m Dan, a web developer with two years of freelance experience. I have worked with a range of businesses on different freelance websites, such as Fiverr plus have helped some local charities with their website issues, such as  WordPress development and SEO.<br />
+        <div class="col-md-12 col-lg-6 p-5">
+          <p class="lead">A proffesional web developer with two years of freelance experience. I have worked with a range of businesses on different freelance websites, such as Fiverr and People Per Hour. Mainly building WordPress custom coded websites, using twitter Bootstrap.
+          Plus, I have donated some of my free time to help local charities with their website issues to.<br />
           <br />
-          I specialise in building clean elongate websites using custom code and twitter bootstrap, using WordPress as the CMS. I feel this achieves a smooth, fast running website, with excellent responsive design and mobile-friendly optimisations.
- <br /><br />
-          When I’m not glued to the computer coding, you will find me being a father or tinkering in my shed with RC cars and electronics.
+          When I’m not glued to the computer coding, I'm being a dad or tinkering in my shed with RC cars and electronics.
           </p>
         <a class="btn btn-primary btn-xl mt-4" href="contact.html">hire me<span class="sr-only">(current)</span></a>
         <a target="_blank" class="btn btn-secondary btn-xl mt-4" href="https://teamtreehouse.com/danielmobbs">my skills<span class="sr-only">(current)</span></a>
@@ -81,8 +93,9 @@
 
   <!--skills & tools-->
   <section class="bg-light page-section">
-    <div class="container">       
-      <div class="card-deck text-center">
+    <div class="container">
+     <h2 class="h2 font-weight-bolder text-white text-center">things that I know</h2>       
+      <div class="card-deck text-center pt-5">
         <div class="card">
           <div class="card-body pt-5">
             <i style="color: #07ba72; font-size: 48px;" class="fas fa-code"></i>
@@ -117,45 +130,54 @@
   </section>
 
   <!--my recent projects-->
-  <section class="page-section">
-    <div class="container">       
-      <div class="card-deck pt-4">
-       <div class="card" style="width:500px">
-        <a href="https://www.quaker-tapestry.co.uk/">
-           <img class="image" src="images/goodly.jpg" alt="Card image">
-           <div class="middle text-center">
-             <h4 class="card-title text">Goodly Dale Cottage</h4>
-             <p class="h1">WordPress Website</p>                
+  <section id="projects" class="page-section">
+    <div class="container">     
+     <h2 class="h2 font-weight-bolder text-center">my recent projects</h2>  
+      <div class="row pt-4">       
+        <div class="col-md-4"> 
+          <a target="_blank" href="https://www.goodlydalecottages.co.uk/">
+             <img class="img-fluid image" src="images/goodly.jpg" alt="Card image">
+             <div class="overlay">
+               <div class="text">
+                 <h4 class="h2 font-weight-bolder">Goodly Dale Home</h4>
+                 <p class="h3">WordPress Website</p>   
+               </div>
+             </div>    
+           </a> 
+       </div>
+       <div class="col-md-4">
+         <a target="_blank" href="https://www.baytrustradio.org.uk/">
+            <img class="img-fluid image" src="images/baytrust.png" alt="Card image">
+            <div class="overlay">
+              <div class="text">
+                <h4 class="h2 font-weight-bolder">Bay Trust Radio</h4>
+                <p class="h3">WordPress Website</p>   
+              </div>               
            </div>
          </a> 
        </div>
-       <div class="card" style="width:500px">
-         <a href="https://www.quaker-tapestry.co.uk/">
-           <img class="card-img-top" src="images/baytrust.png" alt="Card image">
-           <div class="card-img-overlay text-center">
-             <h4 class="card-title">Bay Trust Radio</h4>
-             <p class="h1">WordPress Website</p>                
-           </div>
-         </a> 
-       </div>
-       <div class="card" style="width:500px">
-         <a href="https://www.quaker-tapestry.co.uk/">
-           <img class="card-img-top" src="images/racehorse.png" alt="Card image">
-           <div class="card-img-overlay text-center">
-             <h4 class="card-title">RaceHorse Rescue</h4>
-             <p class="h1">WordPress Website</p>                
-           </div>
+       <div class="col-md-4">
+         <a target="_blank" href="https://www.racehorserescue.org.uk/">
+           <img class="img-fluid image" src="images/racehorse.png" alt="Card image">
+           <div class="overlay">
+             <div class="text">
+                <h4 class="h2 font-weight-bolder">Carlise Racehorse Rescue</h4>
+                <p class="h3">WordPress Website</p>   
+             </div>  
+           </div>  
          </a> 
        </div>
       </div>      
-      <div class="card-deck pt-4">
-       <div class="card" style="width:500px">
-         <a href="https://www.quaker-tapestry.co.uk/">
-           <img class="card-img-top" src="images/quaker.jpg" alt="Card image">
-           <div class="card-img-overlay text-center">
-             <h4 class="card-title">Quaker Tapetry</h4>
-             <p class="h1">WordPress SEO</p>                
-           </div>
+      <div class="row pt-4">
+       <div class="col-md-4">
+         <a target="_blank" href="https://www.quaker-tapestry.co.uk/">
+           <img class="img-fluid image" src="images/quaker.jpg" alt="Card image">
+           <div class="overlay">  
+             <div class="text">
+                <h4 class="h2 font-weight-bolder">Quaker Tapestry</h4>
+                <p class="h3">WordPress SEO</p>   
+             </div>  
+           </div>  
          </a> 
        </div>
        <div class="card" style="width:500px">
