--- a/404.html
+++ b/404.html
@@ -26,76 +26,19 @@
   </head>
 <body>
  
-  <nav class="navbar navbar-dark bg-light">
-    <div class="container-xl">
-      <a class="navbar-brand font-weight-bolder" href="index.html">Daniel Mobbs</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active text-right pt-4">
-            <a class="btn btn-primary btn-xl" href="contact.html">Say Hello<span class="sr-only">(current)</span></a>
-          </li>
-        </ul>  
-      </div>
-    </div> 
-  </nav>
-  
-  <!-- Full Page Image Header with Vertically Centered Content -->
-  <header class="masthead py-5">
-    <div class="container py-5 h-100">
-      <div class="row h-100 align-items-start">
-        <div class="col-12 text-center text-white">
-          <img src="images/avataaars.png" width="218px">
-          <h2 class="font-weight-bold pt-5 h1">Hello, I'm Dan</h2>
-          <h1 class="font-weight-light h2">lover of code, design and web development</h1>
-          <a href="#projects" class="btn btn-primary btn-xl mt-5">my recent work</a>
-        </div>
-      </div>
-    </div>
-  </header>    
-
   <!--about me-->
-  <section class="page-section">
+  <section>
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-lg-12 text-center">
-          <h2 class="h2 font-weight-bolder">Ohh.. dear your lost!</h2>
-        </div> 
-        <div class="col-md-12 col-lg-6 p-4">
-          <img class="img-fluid" src="images/man2.jpg">
+        <div class="col-md-12 col-lg-12">
+          <img class="img-fluid" src="images/404.png">
+        </div>      
+        <div class="col-md-12 col-lg-12 mt-4 text-center">
+          <h2 class="h2 font-weight-bolder">Ohh.. dear you're lost!</h2>
+          <a class="btn btn-primary btn-xl mt-4" href="index.html">head home<span class="sr-only">(current)</span></a>        
         </div>  
-        <div class="col-md-12 col-lg-6 p-5">
-          <p class="lead">A proffesional web developer with two years of freelance experience. I have worked with a range of businesses on different freelance websites, such as Fiverr and People Per Hour. Mainly building WordPress custom coded websites, using twitter Bootstrap.
-          Plus, I have donated some of my free time to help local charities with their website issues to.<br />
-          <br />
-          When I’m not glued to the computer coding, I'm being a dad or tinkering in my shed with RC cars and electronics.
-          </p>
-        <a class="btn btn-primary btn-xl mt-4" href="contact.html">hire me<span class="sr-only">(current)</span></a>
-        <a target="_blank" class="btn btn-secondary btn-xl mt-4" href="https://teamtreehouse.com/danielmobbs">my skills<span class="sr-only">(current)</span></a>
-        </div>  
-      </div>  
     </div>    
-  </section>  
-
-  <!--footer-->
-  <footer class="footer text-center text-white">
-    <div class="container py-4 d-flex justify-content-center">
-      <div class="social-links">
-        <a target="_blank" href="https://www.facebook.com/d.s.mobbzy/?boosted_auto_open=boosted_website&notif_id=1583687102926739&notif_t=aymt_upsell_tip"><i style="color: #fff; font-size: 38px;"class="fab fa-facebook-square"></i></a>
-      </div>
-      <div class="social-links">  
-        <a target="_blank" href="https://twitter.com/dan69563979"><i style="color: #fff; font-size: 38px;"class="fab fa-twitter-square"></i></a>
-      </div>
-      <div class="social-links">
-        <a target="_blank" href="https://www.linkedin.com/in/dan-mobbs-771b1519a/"><i style="color: #fff; font-size: 38px;"class="fab fa-linkedin"></i></a>
-      </div>
-    </div> 
-    <div class="copyright py-3">Built by me <span><i class="far fa-copyright"></span></i> 2020</div>
-    <div class="copyright">Helped by Bootstrap 4 :)</div>
-  </footer>
+  </section>    
 
   <!--Javascript files-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
